--- a/docs/get-involved/hacktoberfest/index-hacktoberfest.mdx
+++ b/docs/get-involved/hacktoberfest/index-hacktoberfest.mdx
@@ -12,7 +12,7 @@ slug: /hacktoberfest/
 
 ## How to get involved
 
-We've created a number of GitHub issues for folks who want to contribute to our documentation and demo apps.  [View our list of open issues.](https://github.com/search?l=&q=%23hacktoberfest+user%3Aredislabs-training+user%3Aredis+user%3Aredis-developer+user%3ANodeRedis+label%3Ahacktoberfest&state=open&type=Issues).
+We've created a number of GitHub issues for folks who want to contribute to our documentation and demo apps.  [View our list of open issues](https://github.com/search?l=&q=%23hacktoberfest+user%3Aredislabs-training+user%3Aredis+user%3Aredis-developer+user%3ANodeRedis+label%3Ahacktoberfest&state=open&type=Issues).
 
 ### Get a GitHub account and Hacktoberfest account
 
