First go at adding authors.

--- a/docs/get-involved/hacktoberfest/index-hacktoberfest.mdx
+++ b/docs/get-involved/hacktoberfest/index-hacktoberfest.mdx
@@ -3,6 +3,7 @@ id: index-hacktoberfest
 title: Hacktoberfest 2021 at Redis
 sidebar_label: Hacktoberfest 2021
 slug: /hacktoberfest/
+authors: [suze,simon]
 ---
 
 
