--- a/docs/explore/redisinsight/autodiscover/index-autodiscover.mdx
+++ b/docs/explore/redisinsight/autodiscover/index-autodiscover.mdx
@@ -1,6 +1,6 @@
 ---
 id: index-autodiscover
-title: Elasticache Auto Discovery Using RedisInsight Tutorial | Redis Developer Hub
+title: Utilize Elasticache Auto Discovery For Redis with RedisInsight
 sidebar_label: Utilize Elasticache Auto Discovery For Redis with RedisInsight
 slug: /explore/redisinsight/autodiscover
 ---
