--- a/docs/explore/redisinsight/profiler/index-profiler.mdx
+++ b/docs/explore/redisinsight/profiler/index-profiler.mdx
@@ -1,7 +1,7 @@
 ---
 id: index-profiler
-title: How To Use RedisInsight Profiler Tool 
-sidebar_label: RedisInsight Profiler Tool - Analyze Your Redis Commands Using Redis Monitor Command
+title: RedisInsight Profiler Tool: Analyze Your Redis Commands Using Redis Monitor Command
+sidebar_label: RedisInsight Profiler Tool:Analyze Your Redis Commands Using Redis Monitor Command
 slug: /explore/redisinsight/profiler
 ---
 
