--- a/docs/explore/redisinsight/getting-started/index-gettingstarted.mdx
+++ b/docs/explore/redisinsight/getting-started/index-gettingstarted.mdx
@@ -1,6 +1,6 @@
 ---
 id: index-gettingstarted
-title: New To RedisInsight
+title: Getting Started with RedisInsight
 sidebar_label: Getting Started 
 slug: /explore/redisinsight/getting-started
 ---
