--- a/docs/explore/redisinsight/getting-started/index-gettingstarted.mdx
+++ b/docs/explore/redisinsight/getting-started/index-gettingstarted.mdx
@@ -1,7 +1,7 @@
 ---
 id: index-gettingstarted
 title: Getting Started with RedisInsight
-sidebar_label: Getting Started 
+sidebar_label: Getting Started with RedisInsight
 slug: /explore/redisinsight/getting-started
 ---
 
