--- a/docs/get-involved/hacktoberfest/index-hacktoberfest.mdx
+++ b/docs/get-involved/hacktoberfest/index-hacktoberfest.mdx
@@ -60,10 +60,16 @@ If you're looking for more repos to contribute to during Hacktoberfest, [check o
 
 Documentation is often cited as a great way to get your feet wet with open source.  So to demystify the world of technical writing, we are hosting four live events with our documentation team - follow us on [Twitch](https://www.twitch.tv/redislabs) to get a reminder.  All sessions are at 9am PT / noon ET / 4pm UTC / 5pm UK / 7pm Israel:
 
-* Friday 15th October: Fireside panel - Suze Shardlow with the documentation team: Technical Writing Explained
+### Upcoming events
 * Monday 25th October: Fireside 1:1 - Suze Shardlow with Kaitlyn, Technical Writer
 * Tuesday 26th October: Fireside 1:1 - Suze Shardlow with Rachel, Technical Writer
 * Friday 29th October: Fireside 1:1 - Suze Shardlow with Lance, Documentation Lead
+
+### Past event recordings
+
+Fireside panel - Suze Shardlow with the documentation team: Technical Writing Explained
+<iframe width="560" height="315" src="https://www.youtube.com/embed/3E8lLKGGdIk" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
 
 ## Contact us
 
