--- a/docs/explore/redisinsight/index-redisinsight.mdx
+++ b/docs/explore/redisinsight/index-redisinsight.mdx
@@ -82,7 +82,7 @@ import useBaseUrl from '@docusaurus/useBaseUrl';
 
  <div class="col">
     <RedisCard
-        title="How To Use RedisInsight Profiler Tool | Redis Developer Hub"
+        title="How To Use RedisInsight Profiler Tool"
         description="Analyze Your Redis Commands Using Redis Monitor Command"
         page="/explore/redisinsight/profiler"
         />
