Adds Kaitlyn's video.

--- a/docs/get-involved/hacktoberfest/index-hacktoberfest.mdx
+++ b/docs/get-involved/hacktoberfest/index-hacktoberfest.mdx
@@ -70,6 +70,9 @@ Documentation is often cited as a great way to get your feet wet with open sourc
 Fireside panel - Suze Shardlow with the documentation team: Technical Writing Explained
 <iframe width="560" height="315" src="https://www.youtube.com/embed/3E8lLKGGdIk" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
+Fireside 1:1 - Suze Shardlow with Kaitlyn Michael: Technical Writing Explained
+<iframe width="560" height="315" src="https://www.youtube.com/embed/CB3tsJAAPXA" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
 
 ## Contact us
 
