Adds Rachel's video.

--- a/docs/get-involved/hacktoberfest/index-hacktoberfest.mdx
+++ b/docs/get-involved/hacktoberfest/index-hacktoberfest.mdx
@@ -72,6 +72,9 @@ Fireside panel - Suze Shardlow with the documentation team: Technical Writing Ex
 Fireside 1:1 - Suze Shardlow with Kaitlyn Michael: Technical Writing Explained
 <iframe width="560" height="315" src="https://www.youtube.com/embed/CB3tsJAAPXA" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
+Fireside 1:1 - Suze Shardlow with Rachel Elledge: Technical Writing Explained
+<iframe width="560" height="315" src="https://www.youtube.com/embed/w6XAFmzhteU" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
 
 ## Contact us
 
