--- a/docs/get-involved/hacktoberfest/index-hacktoberfest.mdx
+++ b/docs/get-involved/hacktoberfest/index-hacktoberfest.mdx
@@ -56,7 +56,7 @@ Need help with one of our issues, or just want to chat with other contributors? 
 
 If you're looking for more repos to contribute to during Hacktoberfest, [check out the Hacktoberfest topic on GitHub](https://github.com/topics/hacktoberfest).  **Redis is not responsible for the content of third party repositories.**
 
-## Join us on Twitch
+## Join us on Twitch and YouTube
 
 Documentation is often cited as a great way to get your feet wet with open source.  So to demystify the world of technical writing, we are hosting four live events with our documentation team - follow us on [Twitch](https://www.twitch.tv/redislabs) to get a reminder.  All sessions are at 9am PT / noon ET / 4pm UTC / 5pm UK / 7pm Israel:
 
