Adds the recording of Simon and Suze's Hacktoberfest live stream.

--- a/docs/get-involved/hacktoberfest/index-hacktoberfest.mdx
+++ b/docs/get-involved/hacktoberfest/index-hacktoberfest.mdx
@@ -8,7 +8,7 @@ slug: /hacktoberfest/
 
 [Hacktoberfest](https://hacktoberfest.digitalocean.com/) is a month-long online festival which takes place every year in October.  It is sponsored by [DigitalOcean](https://www.digitalocean.com/) and aims to encourage people to get involved in open source projects.
 
-<iframe width="560" height="315" src="https://www.youtube.com/embed/JZeHxbLm_IQ" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/g9xt4p_-3AU" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 ## How to get involved
 
