Adds the screen grab of the issue to the post.

--- a/docs/get-involved/hacktoberfest/lara-aasem-story/index-lara-aasem-story.mdx
+++ b/docs/get-involved/hacktoberfest/lara-aasem-story/index-lara-aasem-story.mdx
@@ -23,8 +23,7 @@ My first experience with Hacktoberfest was so fulfilling, I spent all of 2021 ex
 
 This is how I came across [an issue by Redis](https://github.com/redis-developer/redis-kaboom-rpg/issues/7) to implement an API validation for a [Redis RPG game example](https://github.com/redis-developer/redis-kaboom-rpg) built with Kaboom.JS.
 
-# TODO insert screen grab of the issue
-`![Screen grab of the issue](/images/*.jpg)`
+![Screen grab of the issue](images/1-the-issue.png)
 
 It fit all my criteria:
 
