Adds the screen grab of Lara asking to be assigned to the issue to the post.

--- a/docs/get-involved/hacktoberfest/lara-aasem-story/index-lara-aasem-story.mdx
+++ b/docs/get-involved/hacktoberfest/lara-aasem-story/index-lara-aasem-story.mdx
@@ -41,8 +41,7 @@ This last point made the issue all the more enjoyable to work on. I have a high-
 
 Different projects have different guidelines for contributing. These may be outlined in the `README.md` of the project's GitHub repo, in a separate `CONTRIBUTING.md` file in the repo's base directory, or in a guide on the project or organization's website, the latter being the case with Redis as explained in the issue description. The [Redis Hacktoberfest guide](https://developer.redis.com/hacktoberfest/) asked contributors to comment on the issue they're working on and to only claim one at a time out of fairness, which seems to be standard procedure across many open source repos.
 
-# TODO insert screen grab of Lara asking to be assigned to the issue
-`![Screen grab of Lara asking to be assigned](/images/*.jpg)`
+![Screen grab of Lara asking to be assigned](images/2-lara-asking-for-assignment.png)
 
 **2. Running the project**
 
