Adds the first screen grab of the terminal to the post.

--- a/docs/get-involved/hacktoberfest/lara-aasem-story/index-lara-aasem-story.mdx
+++ b/docs/get-involved/hacktoberfest/lara-aasem-story/index-lara-aasem-story.mdx
@@ -47,12 +47,11 @@ Different projects have different guidelines for contributing. These may be outl
 
 After quickly combing through the `README.md`, my next step was to run the project to get a better sense of how it worked. At the time, the project structure was that you could run Redis via Docker but you had to run the API server locally (this has since been addressed via [another issue](https://github.com/redis-developer/redis-kaboom-rpg/issues/1)), so this is what I did. I also made sure to load the sample data as instructed in the Setup section of the `README.md` (and after, if I remember correctly, a few errors).
 
-# TODO insert screen grabs of the terminal
-`![Screen grab of the Redis Kaboom server listening on port 8080](/images/*.jpg)`
+![Screen grab of the Redis Kaboom server listening on port 8080](images/3-terminal.png)
 
-`![Screen grab of data loaded](/images/*.jpg)`
+![Screen grab of data loaded](images/*.jpg)
 
-`![Screen grab of attaching to Redis Kaboom, ready to accept connections](/images/*.jpg)`
+![Screen grab of attaching to Redis Kaboom, ready to accept connections](images/*.jpg)
 
 **3. Trying out the API**
 
