--- a/docs/get-involved/hacktoberfest/lara-aasem-story/index-lara-aasem-story.mdx
+++ b/docs/get-involved/hacktoberfest/lara-aasem-story/index-lara-aasem-story.mdx
@@ -49,7 +49,7 @@ After quickly combing through the `README.md`, my next step was to run the proje
 
 ![Screen grab of the Redis Kaboom server listening on port 8080](images/3-terminal.png)
 
-![Screen grab of data loaded](images/*.jpg)
+![Screen grab of the Redis Kaboom server listening on port 8080](images/4-terminal.png)
 
 ![Screen grab of attaching to Redis Kaboom, ready to accept connections](images/*.jpg)
 
