Adds the third screen grab of the terminal to the post.

--- a/docs/get-involved/hacktoberfest/lara-aasem-story/index-lara-aasem-story.mdx
+++ b/docs/get-involved/hacktoberfest/lara-aasem-story/index-lara-aasem-story.mdx
@@ -51,7 +51,7 @@ After quickly combing through the `README.md`, my next step was to run the proje
 
 ![Screen grab of the Redis Kaboom server listening on port 8080](images/4-terminal.png)
 
-![Screen grab of attaching to Redis Kaboom, ready to accept connections](images/*.jpg)
+![Screen grab of the Redis Kaboom server listening on port 8080](images/5-terminal.png)
 
 **3. Trying out the API**
 
