Adds the screen grab of Lara trying out the API with Postman to the post.

--- a/docs/get-involved/hacktoberfest/lara-aasem-story/index-lara-aasem-story.mdx
+++ b/docs/get-involved/hacktoberfest/lara-aasem-story/index-lara-aasem-story.mdx
@@ -57,8 +57,7 @@ After quickly combing through the `README.md`, my next step was to run the proje
 
 The API in question is a `GET` request that fetches the data for a room given the game ID.
 
-# TODO insert screen grab of Postman showing the room diagram
-`![Screen grab of Postman](/images/*.jpg)`
+![Screen grab of Postman](images/6-postman.png)
 
 **4. Implementing the validation**
 
