Adds the screen grab of Lara testing her work using Postman.

--- a/docs/get-involved/hacktoberfest/lara-aasem-story/index-lara-aasem-story.mdx
+++ b/docs/get-involved/hacktoberfest/lara-aasem-story/index-lara-aasem-story.mdx
@@ -71,8 +71,7 @@ After combing through the sample data I had loaded previously via npm run load a
 
 Always a beautiful moment:
 
-# TODO insert screen grab of Postman
-`![Screen grab of Postman showing an invalid room number](/images/*.jpg)`
+![Screen grab of Postman showing an invalid room number](images/8-postman.png)
 
 6. Opening a PR
 Once I was satisfied with the functionality and quality of the code, I pushed my changes to a fork of the upstream repo and opened a PR. I simply linked the issue number in the PR description as there was no required template to follow and there wasn't much else to note regarding the implementation.
