Adds the screen grab of Lara's PR to the post.

--- a/docs/get-involved/hacktoberfest/lara-aasem-story/index-lara-aasem-story.mdx
+++ b/docs/get-involved/hacktoberfest/lara-aasem-story/index-lara-aasem-story.mdx
@@ -76,8 +76,7 @@ Always a beautiful moment:
 6. Opening a PR
 Once I was satisfied with the functionality and quality of the code, I pushed my changes to a fork of the upstream repo and opened a PR. I simply linked the issue number in the PR description as there was no required template to follow and there wasn't much else to note regarding the implementation.
 
-# TODO insert screen grab of the PR
-`![Screen grab of Lara's pull request](/images/*.jpg)`
+![Screen grab of Lara's pull request](images/9-the-pr.png)
 
 ## Post-merge-um
 
