--- a/docs/get-involved/hacktoberfest/lara-aasem-story/index-lara-aasem-story.mdx
+++ b/docs/get-involved/hacktoberfest/lara-aasem-story/index-lara-aasem-story.mdx
@@ -73,7 +73,8 @@ Always a beautiful moment:
 
 ![Screen grab of Postman showing an invalid room number](images/8-postman.png)
 
-6. Opening a PR
+**6. Opening a PR**
+
 Once I was satisfied with the functionality and quality of the code, I pushed my changes to a fork of the upstream repo and opened a PR. I simply linked the issue number in the PR description as there was no required template to follow and there wasn't much else to note regarding the implementation.
 
 ![Screen grab of Lara's pull request](images/9-the-pr.png)
