Adds the screen grab of the corner case to the post.

--- a/docs/get-involved/hacktoberfest/lara-aasem-story/index-lara-aasem-story.mdx
+++ b/docs/get-involved/hacktoberfest/lara-aasem-story/index-lara-aasem-story.mdx
@@ -83,7 +83,6 @@ Once I was satisfied with the functionality and quality of the code, I pushed my
 
 On checking my PR to see that it was reviewed, approved, and merged (and to revel in the beauty of all those `hacktoberfest-accepted`, `Merged`, and `Closed` labels), I noticed another contributor had referenced my PR in their own. They had some good comments on a corner case I had missed as well as the format of the response I was sending.
 
-# TODO insert screen grab of Chris' comment
-`![Screen grab of another contributor's PR](/images/*.jpg)`
+![Screen grab of another contributor's PR](images/10-corner-case.png)
 
 A quarter of the way into Hacktoberfest 2021 and I had already learned a lot, engaged with other members of the open source community, and had a good time doing it. While finding and contributing to suitable open source issues could still be challenging at times, it was no longer the seemingly impossible task it used to be.
