--- a/docs/explore/redisdatasource/index-redisdatasource.mdx
+++ b/docs/explore/redisdatasource/index-redisdatasource.mdx
@@ -1,6 +1,6 @@
 ---
 id: index-redisdatasource
-title: Redis DataSource for Grafana
+title: How to add Redis as a datasource in Grafana and build customize dashboards for Analytics
 sidebar_label: Redis Data Source for Grafana 
 slug: /explore/redisdatasource
 ---
