Changes to make the edit page functionality configurable.

--- a/docs/get-involved/hacktoberfest/index-hacktoberfest.mdx
+++ b/docs/get-involved/hacktoberfest/index-hacktoberfest.mdx
@@ -4,6 +4,7 @@ title: Hacktoberfest 2021 at Redis
 sidebar_label: Hacktoberfest 2021
 slug: /hacktoberfest/
 authors: [suze,simon]
+isEditable: false
 ---
 
 
