--- a/docs/get-involved/hacktoberfest/index-hacktoberfest.mdx
+++ b/docs/get-involved/hacktoberfest/index-hacktoberfest.mdx
@@ -1,7 +1,7 @@
 ---
 id: index-hacktoberfest
 title: Hacktoberfest 2021 at Redis
-sidebar_label: Hacktoberfest 2021
+sidebar_label: Start Here
 slug: /hacktoberfest/
 ---
 
