--- a/docs/get-involved/hacktoberfest/vincent-aceto-story/index-vincent-aceto-story.mdx
+++ b/docs/get-involved/hacktoberfest/vincent-aceto-story/index-vincent-aceto-story.mdx
@@ -5,3 +5,15 @@ sidebar_label: Vincent's Hacktoberfest at Redis Story
 slug: /hacktoberfest/stories/vincent-aceto
 ---
 
+Hello!  My name's [Vincent Aceto](https://www.vincentaceto.com/) and I am a Software Engineer based in New York City.  Throughout the week, you can find me hacking away on mobile and TV applications over at Equinox Media.  On the weekends, when I'm not getting lost somewhere on my skateboard, I'll be nose deep in some open source or personal projects.
+
+October is a special month for those who enjoy working on exciting software projects.  In fact, there couldn’t be a more perfect month to get into software exploration and contribution; it's collectively known as Hacktoberfest!  Hacktoberfest is a community-led effort to encourage open source contributing and foster learning.  I am a huge advocate for open source, so getting involved in Hacktoberfest is such a joy; if I have the chance to learn something new or brush up on some skills, then definitely count me in.
+
+Now, rewind the clock a bit, and you'd find me perusing Github's Hacktoberfest-tagged issues.  I wanted to find the best first contribution for the month's coding festivities.  While searching, I had one very important criterion that the introductory issue needed to satisfy: to work with a technology that I do not use on a daily basis.  I wanted to make sure that I walked away with a newfound knowledge that would benefit my career.  After some time, my eyes landed on a Redis Developer Community's issue - I knew it immediately, this was perfect!  The checkbox was ticked, for I do not regularly work with Redis.  I was now ready to kick off the Hacktoberfest celebration.
+
+The project I worked on is entitled [Introducing The Geosearch Command](https://github.com/redis-developer/introducing-the-geosearch-command).   The goal of the project is to demonstrate the use of the GEOSEARCH command, which was added to Redis in the recent 6.2 release.  Working as a software engineer, you are almost always going to be working with some cached data and, more often than not, it's Redis that is sitting nicely somewhere in that cache layer.  That said, my first-hand experience (at the time) with the caching technology resonated somewhere between “landing page” and “getting started”.  The project had turned out to be developer sale, a two-for-one: I would get to learn more about the Redis technology, how to set up an instance, familiarize myself with the API, and I would get the opportunity to work with Docker - which I'm not regularly hacking with during my day-to-day.
+
+Now, onto the [issue](https://github.com/redis-developer/introducing-the-geosearch-command/issues/5).  The issue's aim was to extend an existing Docker Compose integration.  The `docker-compose.yml` file was to include a schema, which was to run the repository's Python Flask application in a Docker container.  Additionally, the main application was to connect to the project's existing Redis container - this Redis build step was already included in the Docker Compose file.  With the features and constraints clearly defined, the next step was to pull out the documentation.  To make sure I was familiar with the tech at hand, and to ensure I got the most out of working on the issue, I started with the Redis installation docs - becoming aware that things like the default Redis `port 6379` would come to serve me well when debugging.  After installation, I took some time to explore the Redis API and read about Redis' internal hash implementation at a high level.  The final reconnaissance was to review Docker.  I had briefly used Docker at a previous position, and have worked on some personal projects using the container technology; however, a quick Dockerfile and `docker-compose.yml` refresher was necessary.
+
+With the pre-work done, it was time to start the Flask application's Docker Compose implementation.  Here is a step-by-step guide, expressed in the present tense, to the process:
+
