Adds author to crash course.

--- a/docs/develop/node/node-crash-course/advancedstreams/index-advancedstreams.mdx
+++ b/docs/develop/node/node-crash-course/advancedstreams/index-advancedstreams.mdx
@@ -3,6 +3,7 @@ id: index-advancedstreams
 title: "Advanced Streams: Parallel Processing Checkins with Consumer Groups"
 sidebar_label: Advanced Streams
 slug: /develop/node/nodecrashcourse/advancedstreams
+authors: [simon]
 ---
 
 import useBaseUrl from '@docusaurus/useBaseUrl';
