--- a/docs/develop/node/node-crash-course/caching/index-caching.mdx
+++ b/docs/develop/node/node-crash-course/caching/index-caching.mdx
@@ -3,6 +3,7 @@ id: index-caching
 title: Caching with Redis and Express Middleware
 sidebar_label: Caching
 slug: /develop/node/nodecrashcourse/caching
+authors: [simon]
 ---
 
 import useBaseUrl from '@docusaurus/useBaseUrl';
