--- a/docs/develop/node/node-crash-course/checkinswithstreams/index-checkinswithstreams.mdx
+++ b/docs/develop/node/node-crash-course/checkinswithstreams/index-checkinswithstreams.mdx
@@ -3,6 +3,7 @@ id: index-checkinswithstreams
 title: Processing Checkins with Redis Streams
 sidebar_label: Checkins with Streams
 slug: /develop/node/nodecrashcourse/checkinswithstreams
+authors: [simon]
 ---
 
 import useBaseUrl from '@docusaurus/useBaseUrl';
