--- a/docs/develop/node/node-crash-course/coursewrapup/index-coursewrapup.mdx
+++ b/docs/develop/node/node-crash-course/coursewrapup/index-coursewrapup.mdx
@@ -3,6 +3,7 @@ id: index-coursewrapup
 title: Course Wrap Up
 sidebar_label: Wrap Up
 slug: /develop/node/nodecrashcourse/coursewrapup
+authors: [simon]
 ---
 
 import useBaseUrl from '@docusaurus/useBaseUrl';
