--- a/docs/develop/node/node-crash-course/domainobjectswithhashes/index-domainobjectswithhashes.mdx
+++ b/docs/develop/node/node-crash-course/domainobjectswithhashes/index-domainobjectswithhashes.mdx
@@ -3,6 +3,7 @@ id: index-domainobjectswithhashes
 title: Managing Domain Objects with Redis Hashes
 sidebar_label: Domain Objects with Hashes
 slug: /develop/node/nodecrashcourse/domainobjectswithhashes
+authors: [simon]
 ---
 
 import useBaseUrl from '@docusaurus/useBaseUrl';
