--- a/docs/develop/node/node-crash-course/introducingredisinsight/index-introducingredisinsight.mdx
+++ b/docs/develop/node/node-crash-course/introducingredisinsight/index-introducingredisinsight.mdx
@@ -3,6 +3,7 @@ id: index-introducingredisinsight
 title: Introducing RedisInsight
 sidebar_label: Introducing RedisInsight
 slug: /develop/node/nodecrashcourse/introducingredisinsight
+authors: [simon]
 ---
 
 import useBaseUrl from '@docusaurus/useBaseUrl';
