--- a/docs/develop/node/node-crash-course/managingsuccess/index-managingsuccess.mdx
+++ b/docs/develop/node/node-crash-course/managingsuccess/index-managingsuccess.mdx
@@ -3,6 +3,7 @@ id: index-managingsuccess
 title: Managing Success with Redis
 sidebar_label: Managing Success
 slug: /develop/node/nodecrashcourse/managingsuccess
+authors: [simon]
 ---
 
 import useBaseUrl from '@docusaurus/useBaseUrl';
