--- a/docs/develop/node/node-crash-course/redisandnodejs/index-redisandnodejs.mdx
+++ b/docs/develop/node/node-crash-course/redisandnodejs/index-redisandnodejs.mdx
@@ -3,6 +3,7 @@ id: index-redisandnodejs
 title: Using Redis from Node.js
 sidebar_label: Redis and Node.js
 slug: /develop/node/nodecrashcourse/redisandnodejs
+authors: [simon]
 ---
 
 import useBaseUrl from '@docusaurus/useBaseUrl';
