--- a/docs/develop/node/node-crash-course/redisbloom/index-redisbloom.mdx
+++ b/docs/develop/node/node-crash-course/redisbloom/index-redisbloom.mdx
@@ -3,6 +3,7 @@ id: index-redisbloom
 title: Preventing Duplicate Checkins with RedisBloom
 sidebar_label: RedisBloom
 slug: /develop/node/nodecrashcourse/redisbloom
+authors: [simon]
 ---
 
 import useBaseUrl from '@docusaurus/useBaseUrl';
