--- a/docs/develop/node/node-crash-course/redisjson/index-redisjson.mdx
+++ b/docs/develop/node/node-crash-course/redisjson/index-redisjson.mdx
@@ -3,6 +3,7 @@ id: index-redisjson
 title: Managing Document Data with RedisJSON
 sidebar_label: RedisJSON
 slug: /develop/node/nodecrashcourse/redisjson
+authors: [simon]
 ---
 
 import useBaseUrl from '@docusaurus/useBaseUrl';
