--- a/docs/develop/node/node-crash-course/runningtheapplication/index-runningtheapplication.mdx
+++ b/docs/develop/node/node-crash-course/runningtheapplication/index-runningtheapplication.mdx
@@ -3,6 +3,7 @@ id: index-runningtheapplication
 title: Up and Running with the Sample Application
 sidebar_label: Running the Application
 slug: /develop/node/nodecrashcourse/runningtheapplication
+authors: [simon]
 ---
 
 import useBaseUrl from '@docusaurus/useBaseUrl';
