--- a/docs/develop/node/node-crash-course/sampleapplicationoverview/index-sampleapplicationoverview.mdx
+++ b/docs/develop/node/node-crash-course/sampleapplicationoverview/index-sampleapplicationoverview.mdx
@@ -3,6 +3,7 @@ id: index-sampleapplicationoverview
 title: Sample Application Overview
 sidebar_label: Sample Application Overview
 slug: /develop/node/nodecrashcourse/sampleapplicationoverview
+authors: [simon]
 ---
 
 import useBaseUrl from '@docusaurus/useBaseUrl';
