--- a/docs/develop/node/node-crash-course/sessionstorage/index-sessionstorage.mdx
+++ b/docs/develop/node/node-crash-course/sessionstorage/index-sessionstorage.mdx
@@ -3,6 +3,7 @@ id: index-sessionstorage
 title: Scaling an Express Application with Redis as a Session Store
 sidebar_label: Session Storage
 slug: /develop/node/nodecrashcourse/sessionstorage
+authors: [simon]
 ---
 
 import useBaseUrl from '@docusaurus/useBaseUrl';
