--- a/docs/develop/node/node-crash-course/welcome/index-welcome.mdx
+++ b/docs/develop/node/node-crash-course/welcome/index-welcome.mdx
@@ -3,6 +3,7 @@ id: index-welcome
 title: Welcome to the Node.js Crash Course
 sidebar_label: Welcome 
 slug: /develop/node/nodecrashcourse/welcome
+authors: [simon]
 ---
 
 import useBaseUrl from '@docusaurus/useBaseUrl';
