--- a/docs/develop/node/node-crash-course/whatisredis/index-whatisredis.mdx
+++ b/docs/develop/node/node-crash-course/whatisredis/index-whatisredis.mdx
@@ -3,6 +3,7 @@ id: index-whatisredis
 title: "What is Redis?: An Overview"
 sidebar_label: "What is Redis?"
 slug: /develop/node/nodecrashcourse/whatisredis
+authors: [simon]
 ---
 
 import useBaseUrl from '@docusaurus/useBaseUrl';
