--- a/docs/develop/node/node-crash-course/index-node-crash-course.mdx
+++ b/docs/develop/node/node-crash-course/index-node-crash-course.mdx
@@ -3,6 +3,7 @@ id: index-node-crash-course
 title: The Node.js Crash Course
 sidebar_label: Overview
 slug: /develop/node/node-crash-course
+authors: [simon]
 ---
 
 import RedisCard from '@site/src/theme/RedisCard';
