--- a/docs/develop/node/node-crash-course/introductiontomodules/index-introductiontomodules.mdx
+++ b/docs/develop/node/node-crash-course/introductiontomodules/index-introductiontomodules.mdx
@@ -3,6 +3,7 @@ id: index-introductiontomodules
 title: Introduction to Redis Modules
 sidebar_label: Introduction to Modules
 slug: /develop/node/nodecrashcourse/introductiontomodules
+authors: [simon]
 ---
 
 import useBaseUrl from '@docusaurus/useBaseUrl';
