--- a/docs/develop/node/node-crash-course/redisearch/index-redisearch.mdx
+++ b/docs/develop/node/node-crash-course/redisearch/index-redisearch.mdx
@@ -3,6 +3,7 @@ id: index-redisearch
 title: Indexing and Querying with RediSearch
 sidebar_label: RediSearch
 slug: /develop/node/nodecrashcourse/redisearch
+authors: [simon]
 ---
 
 import useBaseUrl from '@docusaurus/useBaseUrl';
