--- a/docs/develop/python/index-python.mdx
+++ b/docs/develop/python/index-python.mdx
@@ -118,7 +118,7 @@ Check out a few of these apps below, or [click here to access the complete list]
 </div>
 </div>
 
-### Redis University
+## Redis University
 
 ### [Redis for Python Developers](https://university.redislabs.com/courses/ru102py/)
 
