Added a New Tutorial on Prometheus and Social Network

--- a/docs/howtos/redistimeseries/index-redistimeseries.mdx
+++ b/docs/howtos/redistimeseries/index-redistimeseries.mdx
@@ -36,5 +36,16 @@ The following links provides you with the available options to get started with 
         page="/howtos/redistimeseries/using-python"
         />
 </div>
+</div>
+<div class="row">
+  
+ <div class="col">
+     <RedisCard
+        title="How to monitor Redis with Prometheus and Grafana for Real-Time Analytics"
+        description="Using RedisTimeSeries with Prometheus and Grafana"
+        page="/howtos/redistimeseries/using-prometheus"
+        />
+</div>
+ 
 
 </div>
