--- a/docs/howtos/redistimeseries/using-python/index-usingpython.mdx
+++ b/docs/howtos/redistimeseries/using-python/index-usingpython.mdx
@@ -263,4 +263,8 @@ You will see bunch of RedisTimeSeries specific commands(TS.ADD. TS.CREATE and TS
 - [How to Manage Real-Time IoT Sensor Data in Redis](https://redislabs.com/blog/how-to-manage-real-time-iot-sensor-data-in-redis/)
 - [Introduction to RedisTimeSeries - Video](https://www.youtube.com/watch?v=rXynFOrrd-Q)
 
+##
 
+<div>
+<a href="https://launchpad.redis.com" target="_blank" rel="noopener" className="link"> <img src="/img/launchpad.png"  className="thumb" loading="lazy" alt="Redis Launchpad" /></a>
+</div>
