--- a/docs/howtos/index-howtos.mdx
+++ b/docs/howtos/index-howtos.mdx
@@ -129,6 +129,26 @@ This page holds a catalog with dozens of ready-to-use app listings from Redis La
  </div>
 </div>
 
+<div class="row">
+
+ <div class="col">
+    <RedisCard
+        title="Building a Social Network Application using RediSearch"
+        description="How to Build a Social Network Application using RediSearch and NodeJS"
+        page="/howtos/socialnetwork"
+        />
+ </div>
+
+ <div class="col">
+    <RedisCard
+        title="How to Use SSL/TLS with Redis Enterprise"
+        description="Using SSL/TLS with Redis Enterprise"
+        page="/howtos/security"
+        />
+ </div>
+
+</div>
+
 ## Tutorials
 
 <div class="row">
