--- a/docs/howtos/redistimeseries/getting-started/index-redistimeseries.mdx
+++ b/docs/howtos/redistimeseries/getting-started/index-redistimeseries.mdx
@@ -194,3 +194,8 @@ You can use various aggregation types such as  avg, sum, min, max, range, count,
 - [How to Manage Real-Time IoT Sensor Data in Redis](https://redislabs.com/blog/how-to-manage-real-time-iot-sensor-data-in-redis/)
 - [Introduction to RedisTimeSeries - Video](https://www.youtube.com/watch?v=rXynFOrrd-Q)
 
+##
+
+<div>
+<a href="https://launchpad.redis.com" target="_blank" rel="noopener" className="link"> <img src="/img/launchpad.png"  className="thumb" loading="lazy" alt="Redis Launchpad" /></a>
+</div>
