--- a/docs/develop/java/spring/redis-and-spring-course/index-redis-and-spring-course.mdx
+++ b/docs/develop/java/spring/redis-and-spring-course/index-redis-and-spring-course.mdx
@@ -1,6 +1,6 @@
 ---
 id: index-redis-and-spring-course
-title: Redis and Spring Course
+title: Getting Started with Spring Data Redis
 sidebar_label: Overview
 slug: /develop/java/redis-and-spring-course
 ---
